feat: Add startup scripts for loading environment variables and running the application
- Created `start.ps1` for Windows PowerShell to load `.env` and run the app.
- Created `start.sh` for Linux/macOS to load `.env` and run the app.

chore: Add seed data SQL migration for testing

- Added `V6__seed_data.sql` to populate initial data for tenants, stages, users, vehicles, trips, fares, and bookings.

feat: Implement landing page with features and roles overview

- Created `landing.html` to serve as the landing page with information about the platform, features, roles, and tech stack.

test: Add unit tests for TicketBookingService

- Added test classes for various scenarios in `TicketBookingServiceTest`.

chore: Update Maven status files for test compilation